# odk-stack

./: .gitmodules  docker-compose.old.yml  docker-compose.prod.yml  docker-compose.yml
odk-api/: .development.env
odk-api/app/: main.py
odk-api/tools/send_raw_frames/: index.js
odk-app/: .env.development  .env.production  5936616ab5877ad8.crt  Dockerfile  brand_cp.odp-cloud.com.key  package-lock.json  production-nginx.conf
odk-app/public/: manifest.json
odk-app/src/components/: BrowserStartPage.vue
odk-app/src/components/authentication/: CodePage.vue  UserPage.vue
odk-app/src/components/manuals/: contentInstallManual.json  contentResetManual.json
odk-app/src/components/onboarding/: ChecklistPage.vue  (+4 more)
odk-frame-analyzer/: .dockerignore  .gitignore  DEVELOPMENT.md  Dockerfile  README.md  cli.py  deployment.yaml  frame_analyzer_worker.conf  k8s.dockerfile  playground.py  produce_frame.py  pyproject.toml  requirements-dev.txt  requirements.txt  runtests.sh  sample.json  start_worker.py  start_worker_k8s.py  update_yolov5_dependencies.sh
odk-frame-analyzer/dockerfiles/: docker-compose.yml  rmq-definitions.json
odk-frame-analyzer/frame_analyzer/detection/: pytorch.py  yolov5_detector.py  yolov5_utils.py
odk-frame-analyzer/frame_analyzer/rmq/: worker.py
odk-frame-analyzer/frame_analyzer/schemas/: detected_object.py  frame.py
odk-frame-analyzer/frame_analyzer/utils/: image_util.py  persist_util.py  privacy_util.py
odk-frame-analyzer/output/: readme.txt
odk-frame-analyzer/tests/rmq/: test_worker.py
odk-frame-analyzer/weights/: weights_drive_link.txt
(+3 files in other folders)
